# Multi-Modular-LLM

./: .gitignore  README.md  generate.py  pyproject.toml
inference/: generate.py
model/: __init__.py  transformer.py
scripts/: generate_text_dataset.py  web_crawler.py
training/: train_transformer.py
utils/: checkpoint_utils.py  dataset.py  register_model.py  streaming_dataset.py  tokenizer.py  web_streaming_dataset.py
